# fourinsight-campaigns-python

./: .gitignore  README.rst  setup.cfg  setup.py  tox-deploy.ini  tox.ini
.deploy/: deploy.msbuild  fourinsight.campaigns.pythonclient.nuspec  fourinsight.engineroom.pythonclient.nuspec  packages.config
.deploy/scripts/: Deploy.ps1
.github/workflows/: cd.yml  ci.yaml  deploy.yaml  deploy_public.yml
docs/: api.rst  basic_usage.rst  conf.py  developer.rst  getting_started.rst  index.rst  logging.rst  release_notes.rst  support.rst
docs/api_ref/: authentication.rst  channels.rst  client.rst  generic_campaign.rst  index.rst  root.rst  swim_campaign.rst  utils.rst
docs/user_guide/: access_campaigns.rst  download_sensordata.rst  get_campaigndata.rst  get_sensordata.rst  index.rst
docs_old/: basic_usage.rst  conf.py
fourinsight/campaigns/: __init__.py  api.py  campaign.py  channels.py  client.py  shared.py  utils.py
tests/: conftest.py  temp_test.py  test_api.py  test_campaign.py  test_client.py  test_utils.py
tests/testdata/: get_data.py  get_data_v11.py
