[metadata]
name = fourinsight-campaigns
version = attr: fourinsight.campaigns.__version__
licence = MIT
author = 4Subsea
author_email = support@4subsea.com
description = 4insight campaigns
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://4insight.io
project_urls =
    Documentation = https://docs.4insight.io/campaigns/python/latest
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages = find_namespace:
python_requires = >=3.10
install_requires = 
    fourinsight-api
    pandas
    numpy < 2.0.0

[options.packages.find]
include = fourinsight.campaigns